--- a/index.php.1
+++ b/index.php.1
@@ -1,4 +1,4 @@
-d>
+djsbfkjdbfjkd>
 	<title>Hello Osones</title>
 	<link href='//fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 	<style>
